--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,16 +5,16 @@
 <!-- <link rel="stylesheet" href="css/basic.css" />
 <link rel="stylesheet" href="css/dropzone.css" /> -->
 
-<meta name="viewport" content="widtd=device-widtd, initial-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!-- Bootstrap -->
-<link href="bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="css/font-awesome.min.css" rel="stylesheet" media="screen">
+<link href="static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="static/css/font-awesome.min.css" rel="stylesheet" media="screen">
 <!-- <link href="css/bootflat.css" rel="stylesheet" media="screen">
 <link href="css/bootflat-extensions.css" rel="stylesheet" media="screen">
 <link href="css/bootflat-square.css" rel="stylesheet" media="screen"> -->
 
 <!-- <script src="bower_components/angular/angular.min.js"></script> -->
-<script src="js/app.js"></script>
+<script src="static/js/app.js"></script>
 <!-- <script src="js/dropzone.js"></script> -->
 </head>
 
@@ -25,7 +25,7 @@
 	<div class="form-group">
     	<label class="sr-only" for="ticket_search">Search trac</label>
 		<input class="form-control input-lg" type="search" name="ticket_search" placeholder="Search trac" />
-	
+
 	</div>
 		<button type="submit" class="btn btn-default">Search</button>
 	</form>
@@ -36,8 +36,8 @@
 <tr><td>324</td><td>Some title</td><td>Open</td><td>Mark</td></tr>
 <tr><td>324</td><td>Some title</td><td>Resolved</td><td>Jan</td></tr>
 </table>
-<script src="js/jquery.js"></script>
+<script src="static/js/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
 </body>
 </html>
