--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,6 @@
 <html >
 <head>
-<title>Tracula</title>
+<title>Tracula - it may suck but it won't bite</title>
 
 <!-- <link rel="stylesheet" href="css/basic.css" />
 <link rel="stylesheet" href="css/dropzone.css" /> -->
@@ -13,31 +13,44 @@
 <link href="css/bootflat-extensions.css" rel="stylesheet" media="screen">
 <link href="css/bootflat-square.css" rel="stylesheet" media="screen"> -->
 
-<!-- <script src="bower_components/angular/angular.min.js"></script> -->
-<script src="static/js/app.js"></script>
-<!-- <script src="js/dropzone.js"></script> -->
 </head>
 
 <body >
+<script type="text/x-handlebars">
 
 <nav class="navbar navbar-default" role="navigation">
 	<form name="search" >
 	<div class="form-group">
     	<label class="sr-only" for="ticket_search">Search trac</label>
-		<input class="form-control input-lg" type="search" name="ticket_search" placeholder="Search trac" />
-
+    	{{input type="search" value=searchQuery placeholder="Search trac" class="form-control input-lg"}}
 	</div>
 		<button type="submit" class="btn btn-default">Search</button>
 	</form>
 </nav>
 
-<table class="table table-hover table-striped">
-<tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
-<tr><td>324</td><td>Some title</td><td>Open</td><td>Mark</td></tr>
-<tr><td>324</td><td>Some title</td><td>Resolved</td><td>Jan</td></tr>
-</table>
-<script src="static/js/jquery.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<table class="table table-hover table-striped">
+		<tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
+		{{#each tickets}}
+		<tr><td>{{id}}</td><td>{{title}}</td><td>{{status}}</td><td>{{assigned_to}}</td></tr>
+		{{/each}}
+	</table>
+
+</script>
+
+<script type="text/x-handlebars" data-template-name="search-results">
+
+</script>
+
+<!-- JS libs -->
+<script src="static/bower_components/jquery/jquery.min.js"></script>
+<script src="static/bower_components/handlebars/handlebars.js"></script>
+<script src="static/bower_components/ember/ember.js"></script>
+<script src="static/bower_components/ember-data/ember-data.js"></script>
+
+<script src="static/js/tracula-app.js"></script>
+<script src="static/js/tracula-router.js"></script>
+<script src="static/js/models/ticket.js"></script>
+
 <script src="static/js/bootstrap.min.js"></script>
 </body>
 </html>
