--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,10 +9,11 @@
 <!-- Bootstrap -->
 <link href="static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="static/css/font-awesome.min.css" rel="stylesheet" media="screen">
-<!-- <link href="css/bootflat.css" rel="stylesheet" media="screen">
-<link href="css/bootflat-extensions.css" rel="stylesheet" media="screen">
-<link href="css/bootflat-square.css" rel="stylesheet" media="screen"> -->
-
+<!--
+<link href="static/css/bootflat.css" rel="stylesheet" media="screen">
+<link href="static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
+<link href="static/css/bootflat-square.css" rel="stylesheet" media="screen"> 
+-->
 </head>
 
 <body >
@@ -37,9 +38,9 @@
 <script type="text/x-handlebars" data-template-name="ticket">
 	<table class="table table-hover table-striped">
 		<tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
-		
+		{{#with ticket}}
 		<tr><td>{{id}}</td><td>{{attributes.summary}}</td><td>{{attributes.status}}</td><td>{{attributes.owner}}</td></tr>
-		
+		{{/with}}
 	</table>
 </script>
 
