--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -20,13 +20,13 @@
 <script type="text/x-handlebars">
 
 <nav class="navbar navbar-default" role="navigation">
-	<form name="search" action="/search" >
-	<div class="form-group">
-    	<label class="sr-only" for="ticket_search">Search trac</label>
-    	{{input type="search" value=searchQuery placeholder="Search trac" class="form-control input-lg"}}
-	</div>
-		<button type="submit" class="btn btn-default">Search</button>
-	</form>
+  <form name="search" action="/search" class="form-inline" role="form" >
+  <div class="form-group">
+    <label class="sr-only" for="ticket_search">Search trac</label>
+    {{input type="search" value=searchQuery placeholder="Search trac" class="form-control input-lg"}}
+  </div>
+    <button type="submit" class="btn btn-success"> Search</button>
+  </form>
 </nav>
 {{outlet}}
 
@@ -36,12 +36,12 @@
 </script>
 
 <script type="text/x-handlebars" data-template-name="ticket">
-	<table class="table table-hover table-striped">
-		<tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
-		{{#with ticket}}
-		<tr><td>{{id}}</td><td>{{attributes.summary}}</td><td>{{attributes.status}}</td><td>{{attributes.owner}}</td></tr>
-		{{/with}}
-	</table>
+    <table class="table table-hover table-striped">
+        <tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
+        {{#with ticket}}
+        <tr><td>{{id}}</td><td>{{attributes.summary}}</td><td>{{attributes.status}}</td><td>{{attributes.owner}}</td></tr>
+        {{/with}}
+    </table>
 </script>
 
 <!-- JS libs -->
