some styling from bootstrap

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -9,11 +9,12 @@
 <!-- Bootstrap -->
 <link href="static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="static/css/font-awesome.min.css" rel="stylesheet" media="screen">
-<!--
+
 <link href="static/css/bootflat.css" rel="stylesheet" media="screen">
+
 <link href="static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
 <link href="static/css/bootflat-square.css" rel="stylesheet" media="screen"> 
--->
+
 </head>
 
 <body >
@@ -36,12 +37,20 @@
 </script>
 
 <script type="text/x-handlebars" data-template-name="ticket">
-    <table class="table table-hover table-striped">
-        <tr><th>ID</th><th>Title</th><th>Status</th><th>Assigned To</th></tr>
         {{#with ticket}}
-        <tr><td>{{id}}</td><td>{{attributes.summary}}</td><td>{{attributes.status}}</td><td>{{attributes.owner}}</td></tr>
+        <div class="row">
+          <div class="col-md-8">
+            <div class="page-header">
+              <h1>{{attributes.summary}} <small>{{id}}</small></h1>
+            </div> 
+          </div> 
+          
+        </div>
+        <div class="row">
+          <div class="col-md-4">{{attributes.status}}</div><div class="col-md-4">{{attributes.owner}}</div>
+        </div>
         {{/with}}
-    </table>
+    
 </script>
 
 <!-- JS libs -->
