render desc using pre

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -49,6 +49,13 @@
         <div class="row">
           <div class="col-md-4">{{attributes.status}}</div><div class="col-md-4">{{attributes.owner}}</div>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+          <pre>
+          {{attributes.description}}
+          </pre>
+          </div>
+        </div>
         {{/with}}
     
 </script>
