--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,7 +34,7 @@
 {{outlet}}
 </div>
 
-<footer>
+<footer class="row">
 <p>Crafted with Ember.js</p>
 </footer>
 </script>
@@ -75,6 +75,7 @@
 <script src="static/bower_components/ember-data/ember-data.js"></script>
 <script src="static/bower_components/underscore/underscore-min.js"></script>
 <script src="static/js/utils.js"></script>
+<script src="static/js/contrib/wiki2html.js"></script>
 <script src="static/js/tracula-app.js"></script>
 <script src="static/js/models/ticket.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
