footer needs no row class

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -34,7 +34,7 @@
 {{outlet}}
 </div>
 
-<footer class="row">
+<footer>
 <p>Crafted with Ember.js</p>
 </footer>
 </script>
@@ -64,7 +64,6 @@
     
     </div>
   </div>
-  
     
 </script>
 
