--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -40,23 +40,28 @@
 </script>
 
 <script type="text/x-handlebars" data-template-name="ticket">
-  {{#with ticket}}
+  
   <div class="row">
     <div class="col-md-8">
       <div class="page-header">
-        <h1>{{attributes.summary}} <small>{{id}}</small></h1>
+        <h1> {{ticket.attributes.summary}} <small>{{ticket.id}}</small></h1>
+        <small>Created: {{created}}</small>
       </div> 
     </div> 
-    
   </div>
+
+  {{#with ticket}}
   <div class="row">
+    <div class="col-md-1">Type: {{attributes.type}}</div>
+    <div class="col-md-1">Component: {{attributes.component}}</div>
     <div class="col-md-1">Priority: {{attributes.priority}}</div>
     <div class="col-md-1">Status: {{attributes.status}}</div>
     <div class="col-md-1">Owner: {{attributes.owner}}</div>
     <div class="col-md-1">Reported by: {{attributes.reporter}}</div>
   </div>
   {{/with}}
-
+  
+  <hr>
   <div class="row">
     <div class="col-md-12">
     
