--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -51,7 +51,7 @@
 </footer>
 </script>
 
-<script type="text/x-handlebars" data-template-name="ticket">
+<script type="text/x-handlebars" data-template-name="ticket/view">
   {{#if ticket}}
     <div class="row">
       <div class="col-md-8">
@@ -93,6 +93,23 @@
 
 </script>
 
+
+<script type="text/x-handlebars" data-template-name="ticket/create">
+<h1>Create Ticket</h1>
+<form method="create_ticket" id="create_ticket_form" {{action createTicket on="submit"}}>
+  <div class="form-group">
+    <label for="summary">Title/Summary</label>
+    <input type="text" name="summary" class="form-control"  id="summary"/>
+  </div>
+  <div class="form-group">
+    <label for="description">Description</label>
+    <textarea name="description" class="form-control" rows="3" id="description"></textarea>
+  </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+  </div>
+</form>
+</script>
+
 <!-- JS libs -->
 <script src="static/bower_components/jquery/jquery.min.js"></script>
 <script src="static/bower_components/handlebars/handlebars.js"></script>
@@ -105,8 +122,8 @@
 <script src="static/js/tracula-app.js"></script>
 <script src="static/js/models/ticket.js"></script>
 <script src="static/js/controllers/app.controller.js"></script>
-<script src="static/js/routes/ticket.route.js"></script>
-<script src="static/js/controllers/ticket.controller.js"></script>
+<script src="static/js/routes/ticket-view.route.js"></script>
+<script src="static/js/controllers/ticket-view.controller.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
 </body>
 </html>
