--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -39,7 +39,7 @@
     <button id="create-ticket" class="btn primary" {{action "openCreateTicketAction"}}>Create</button>
   </form>
 
-  
+
 </nav>
 
 <div class="container">
@@ -56,7 +56,7 @@
     <div class="row">
       <div class="col-md-8">
         <div class="page-header">
-          <h1> {{view Ember.ContenteditableView id="summary" contenteditable="true" valueBinding="ticket.attributes.summary" action="titleDidChange"}} <small>{{ticket.id}}</small></h1>
+          <h1> {{view Ember.ContenteditableView id="summary" contenteditable="true" valueBinding="ticket.summary" action="titleDidChange"}} <small>{{ticket.id}}</small></h1>
           <small>Created: {{created}}</small>
         </div>
       </div>
@@ -64,12 +64,12 @@
 
     {{#with ticket}}
       <div class="row">
-        <div class="col-md-1">Type: {{attributes.type}}</div>
-        <div class="col-md-1">Priority: {{attributes.priority}}</div>
-        <div class="col-md-1">Status: {{attributes.status}}</div>
-        <div class="col-md-1">Owner: {{attributes.owner}}</div>
-        <div class="col-md-1">Reported by: {{attributes.reporter}}</div>
-        <div class="col-md-1">Component: {{attributes.component}}</div>
+        <div class="col-md-1">Type: {{type}}</div>
+        <div class="col-md-1">Priority: {{priority}}</div>
+        <div class="col-md-1">Status: {{status}}</div>
+        <div class="col-md-1">Owner: {{owner}}</div>
+        <div class="col-md-1">Reported by: {{reporter}}</div>
+        <div class="col-md-1">Component: {{component}}</div>
       </div>
     {{/with}}
 
