fixed broken compiled cljs

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -116,16 +116,13 @@
 <script src="static/bower_components/handlebars/handlebars.js"></script>
 <!-- <script src="static/bower_components/backbone/backbone-min.js"></script> -->
 
-<script src="static/bower_components/ember/ember.js"></script>
-<script src="static/js/views/ember.contenteditable.view.js"></script>
-<script src="static/bower_components/underscore/underscore-min.js"></script>
-<script src="static/js/utils.js"></script>
-<script src="static/js/tracula-app.js"></script>
-<script src="static/js/models/ticket.js"></script>
-<script src="static/js/controllers/app.controller.js"></script>
-<script src="static/js/routes/ticket-view.route.js"></script>
-<script src="static/js/controllers/ticket-view.controller.js"></script>
-<script src="static/js/controllers/ticket-create.controller.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
+
+<script type="text/javascript">
+var CLOSURE_NO_DEPS = true;
+</script>
+<script src="/static/js/base.js" type="text/javascript"></script>
+<script src="/static/js/app.js" type="text/javascript"></script>
+
 </body>
 </html>
