updated clojurescript dependency to 2120 to make it work with js literals

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -109,15 +109,8 @@ Some text
 
 <!-- JS libs -->
 <script src="static/bower_components/jquery/jquery.min.js"></script>
-<script src="static/bower_components/handlebars/handlebars.js"></script>
-<!-- <script src="static/bower_components/backbone/backbone-min.js"></script> -->
-
 <script src="static/js/bootstrap.min.js"></script>
-
-<script>
-// var CLOSURE_NO_DEPS = true;
-</script>
-
+<script src="static/bower_components/react/react.min.js"></script>
 <script src="/static/js/app.js" type="text/javascript"></script>
 
 </body>
