updated, not using om yet

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-<nav class="navbar navbar-default" role="navigation">
+<!-- <nav class="navbar navbar-default" role="navigation">
   <form name="search" action="/search" class="form-inline" role="form" id="search_form" action="searchFormSubmit" on="submit">
   <div class="form-group">
     <label class="sr-only" for="ticket_search">Search trac</label>
@@ -37,7 +37,7 @@
     <button type="submit" class="btn btn-success"> Search</button>
     <button id="create-ticket" class="btn primary" action="createTicket">Create</button>
   </form>
-</nav>
+</nav> -->
 
 <div id="container">
 Some text
