--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -14,26 +14,8 @@
 
 <link href="static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
 <link href="static/css/bootflat-square.css" rel="stylesheet" media="screen">
-
+<link href="static/css/tracula.css" rel="stylesheet" media="screen">
 </head>
-
-<style>
-  [contenteditable=true] {
-    border: 1px solid white;
-  }
-  [contenteditable=true]:hover {
-    border: 1px dotted gray;
-  }
-
-  #navbar input, button {
-    margin-left: 20px;
-    margin-top: 5px;
-  }
-  #container{
-    margin: auto;
-    width: 950px;
-  }
-</style>
 
 <body>
 <!--Nav bar gets created here -->
@@ -47,7 +29,7 @@ Some text
 
 <!--Page footer goes here -->
 <footer class="container pull-right" >
-<small>Cobbled together with Ember.js & Clojure</small>
+<small>Mark Frawley</small>
 </footer>
 
 <script type="text/x-handlebars" data-template-name="ticket/create">
@@ -69,8 +51,12 @@ Some text
 <!-- JS libs -->
 <script src="static/bower_components/jquery/jquery.min.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
-<script src="static/bower_components/react/react.min.js"></script>
-<script src="/static/js/app.js" type="text/javascript"></script>
+<!-- <script src="static/bower_components/react/JSXTransformer.js"></script> -->
+<script src="static/bower_components/react/react.js"></script>
+<script src="static/typescript/build/navbar.js"></script>
+<script src="static/typescript/build/tracula.js"></script>
+
+<!-- <script src="/static/js/app.js" type="text/javascript"></script> -->
 <!-- <script src="/static/js/tracula.js" type="text/javascript"></script>  -->
 </body>
 </html>
