--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -54,6 +54,7 @@ Some text
 <!-- <script src="static/bower_components/react/JSXTransformer.js"></script> -->
 <script src="static/bower_components/react/react.js"></script>
 <script src="static/typescript/build/navbar.js"></script>
+<script src="static/typescript/build/ticket.js"></script>
 <script src="static/typescript/build/tracula.js"></script>
 
 <!-- <script src="/static/js/app.js" type="text/javascript"></script> -->
