--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -51,13 +51,11 @@ Some text
 <!-- JS libs -->
 <script src="static/bower_components/jquery/jquery.min.js"></script>
 <script src="static/js/bootstrap.min.js"></script>
+<script src="static/js/contrib/router.js"></script>
 <!-- <script src="static/bower_components/react/JSXTransformer.js"></script> -->
 <script src="static/bower_components/react/react.js"></script>
 <script src="static/typescript/build/navbar.js"></script>
 <script src="static/typescript/build/ticket.js"></script>
 <script src="static/typescript/build/tracula.js"></script>
-
-<!-- <script src="/static/js/app.js" type="text/javascript"></script> -->
-<!-- <script src="/static/js/tracula.js" type="text/javascript"></script>  -->
 </body>
 </html>
