--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,14 +7,14 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!-- Bootstrap -->
-<link href="static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
-<link href="static/css/font-awesome.min.css" rel="stylesheet" media="screen">
+<link href="/static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="/static/css/font-awesome.min.css" rel="stylesheet" media="screen">
 
-<link href="static/css/bootflat.css" rel="stylesheet" media="screen">
+<link href="/static/css/bootflat.css" rel="stylesheet" media="screen">
 
-<link href="static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
-<link href="static/css/bootflat-square.css" rel="stylesheet" media="screen">
-<link href="static/css/tracula.css" rel="stylesheet" media="screen">
+<link href="/static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
+<link href="/static/css/bootflat-square.css" rel="stylesheet" media="screen">
+<link href="/static/css/tracula.css" rel="stylesheet" media="screen">
 </head>
 
 <body>
@@ -24,7 +24,6 @@
 
 <!--Page content goes here -->
 <div id="container">
-Some text
 </div>
 
 <!--Page footer goes here -->
@@ -49,13 +48,13 @@ Some text
 </script>
 
 <!-- JS libs -->
-<script src="static/bower_components/jquery/jquery.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
-<script src="static/js/contrib/router.js"></script>
-<!-- <script src="static/bower_components/react/JSXTransformer.js"></script> -->
-<script src="static/bower_components/react/react.js"></script>
-<script src="static/typescript/build/navbar.js"></script>
-<script src="static/typescript/build/ticket.js"></script>
-<script src="static/typescript/build/tracula.js"></script>
+<script src="/static/bower_components/jquery/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/js/contrib/router.js"></script>
+<!-- <script src="/static/bower_components/react/JSXTransformer.js"></script> -->
+<script src="/static/bower_components/react/react.js"></script>
+<script src="/static/typescript/build/navbar.js"></script>
+<script src="/static/typescript/build/ticket.js"></script>
+<script src="/static/js/tracula.js"></script>
 </body>
 </html>
