--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -53,8 +53,14 @@
 <script src="/static/js/contrib/router.js"></script>
 <!-- <script src="/static/bower_components/react/JSXTransformer.js"></script> -->
 <script src="/static/bower_components/react/react.js"></script>
-<script src="/static/typescript/build/navbar.js"></script>
-<script src="/static/typescript/build/ticket.js"></script>
-<script src="/static/js/tracula.js"></script>
+
+<!-- Tracula stuff starts here -->
+<script src="/static/js/tracula/ns.js"></script>
+<script src="/static/react_components/build/navbar.js"></script>
+<script src="/static/react_components/build/ticket.js"></script>
+
+<script src="/static/js/tracula/event.js"></script>
+<script src="/static/js/tracula/api.js"></script>
+<script src="/static/js/tracula/core.js"></script>
 </body>
 </html>
