--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -56,11 +56,12 @@
 
 <!-- Tracula stuff starts here -->
 <script src="/static/js/tracula/ns.js"></script>
-<script src="/static/react_components/build/navbar.js"></script>
-<script src="/static/react_components/build/ticket.js"></script>
-
 <script src="/static/js/tracula/event.js"></script>
 <script src="/static/js/tracula/api.js"></script>
+<!-- React components -->
+<script src="/static/js/react_components/build/navbar.js"></script>
+<script src="/static/js/react_components/build/ticket.js"></script>
+<!-- Release the beast -->
 <script src="/static/js/tracula/core.js"></script>
 </body>
 </html>
