--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -56,6 +56,7 @@
 
 <!-- Tracula stuff starts here -->
 <script src="/static/js/tracula/ns.js"></script>
+<script src="/static/js/tracula/history.js"></script>
 <script src="/static/js/tracula/event.js"></script>
 <script src="/static/js/tracula/api.js"></script>
 <!-- React components -->
