restructure ticket components into separate files

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -61,7 +61,14 @@
 <script src="/static/js/tracula/api.js"></script>
 <!-- React components -->
 <script src="/static/js/react_components/build/navbar.js"></script>
+
+<!-- Ticket Components -->
+<script src="/static/js/react_components/build/ticket/ticket.actions.js"></script>
+<script src="/static/js/react_components/build/ticket/ticket.info.js"></script>
+<script src="/static/js/react_components/build/ticket/ticket.title.js"></script>
+<script src="/static/js/react_components/build/ticket/ticket.view.js"></script>
 <script src="/static/js/react_components/build/ticket.js"></script>
+
 <!-- Release the beast -->
 <script src="/static/js/tracula/core.js"></script>
 <script type="text/javascript">
