added home component and made namespace for components

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -54,6 +54,8 @@
 <script src="/static/js/react_components/build/ticket/ticket.create.js"></script>
 <script src="/static/js/react_components/build/ticket.js"></script>
 
+<!-- Home Component -->
+<script src="/static/js/react_components/build/home.js"></script>
 
 <!-- Release the beast -->
 <script src="/static/js/tracula/core.js"></script>
