--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -10,10 +10,11 @@
 <link href="/static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="/static/css/font-awesome.min.css" rel="stylesheet" media="screen">
 
-<link href="/static/css/bootflat.css" rel="stylesheet" media="screen">
+<!--  <link href="/static/css/bootflat.css" rel="stylesheet" media="screen">
+
 
 <link href="/static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
-<link href="/static/css/bootflat-square.css" rel="stylesheet" media="screen">
+<link href="/static/css/bootflat-square.css" rel="stylesheet" media="screen">  -->
 <link href="/static/css/tracula.css" rel="stylesheet" media="screen">
 </head>
 
