jimprint slows rendering

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -61,14 +61,14 @@
 <!-- Release the beast -->
 <script src="/static/js/tracula/core.js"></script>
 <script type="text/javascript">
-    (function(d, tagName) {
-        var js = d.createElement(tagName), ins;
-        js.type = 'text/javascript';
-        js.async = true;
-        js.src = 'https://jimprint.jimdo-server.com/buttons/loader.js';
-        ins = d.getElementsByTagName(tagName)[0];
-        ins.parentNode.insertBefore(js, ins);
-    })(document, 'script')
+    // (function(d, tagName) {
+    //     var js = d.createElement(tagName), ins;
+    //     js.type = 'text/javascript';
+    //     js.async = true;
+    //     js.src = 'https://jimprint.jimdo-server.com/buttons/loader.js';
+    //     ins = d.getElementsByTagName(tagName)[0];
+    //     ins.parentNode.insertBefore(js, ins);
+    // })(document, 'script')
 </script>
 </body>
 </html>
