--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,14 +7,11 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <!-- Bootstrap -->
-<link href="/static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen">
+<!-- <link href="/static/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+
+<link href="/static/css/flatly.min.css" rel="stylesheet" media="screen">
 <link href="/static/css/font-awesome.min.css" rel="stylesheet" media="screen">
 
-<!--  <link href="/static/css/bootflat.css" rel="stylesheet" media="screen">
-
-
-<link href="/static/css/bootflat-extensions.css" rel="stylesheet" media="screen">
-<link href="/static/css/bootflat-square.css" rel="stylesheet" media="screen">  -->
 <link href="/static/css/tracula.css" rel="stylesheet" media="screen">
 </head>
 
@@ -40,6 +37,7 @@
 <script src="/static/bower_components/react/react.js"></script>
 
 <!-- Tracula stuff starts here -->
+<script src="/static/js/utils.js"></script>
 <script src="/static/js/tracula/ns.js"></script>
 <script src="/static/js/tracula/history.js"></script>
 <script src="/static/js/tracula/event.js"></script>
