added login comp and route

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -56,6 +56,9 @@
 <!-- Home Component -->
 <script src="/static/js/react_components/build/home.js"></script>
 
+<!-- Login Component -->
+<script src="/static/js/react_components/build/login.js"></script>
+
 <!-- Release the beast -->
 <script src="/static/js/tracula/core.js"></script>
 <script type="text/javascript">
