so, rakefile to compile all js works surprisingly well

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -30,37 +30,36 @@
 </footer>
 
 <!-- JS libs -->
-<script src="/static/bower_components/jquery/jquery.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
+<!-- <script src="/static/bower_components/jquery/jquery.min.js"></script>
+<script src="/static/js/contrib/bootstrap.min.js"></script>
 <script src="/static/js/contrib/router.js"></script>
-<!-- <script src="/static/bower_components/react/JSXTransformer.js"></script> -->
-<script src="/static/bower_components/react/react.js"></script>
+<script src="/static/bower_components/react/react.js"></script> -->
 
 <!-- Tracula stuff starts here -->
-<script src="/static/js/utils.js"></script>
+<!-- <script src="/static/js/tracula/utils.js"></script>
 <script src="/static/js/tracula/ns.js"></script>
 <script src="/static/js/tracula/history.js"></script>
 <script src="/static/js/tracula/event.js"></script>
-<script src="/static/js/tracula/api.js"></script>
+<script src="/static/js/tracula/api.js"></script> -->
 <!-- React components -->
-<script src="/static/js/react_components/src/navbar.js"></script>
+<!-- <script src="/static/js/react_components/src/navbar.js"></script> -->
 
 <!-- Ticket Components -->
-<script src="/static/js/react_components/src/ticket/ticket.actions.js"></script>
+<!-- <script src="/static/js/react_components/src/ticket/ticket.actions.js"></script>
 <script src="/static/js/react_components/src/ticket/ticket.info.js"></script>
 <script src="/static/js/react_components/src/ticket/ticket.title.js"></script>
 <script src="/static/js/react_components/src/ticket/ticket.view.js"></script>
 <script src="/static/js/react_components/src/ticket/ticket.create.js"></script>
-<script src="/static/js/react_components/src/ticket.js"></script>
+<script src="/static/js/react_components/src/ticket.js"></script> -->
 
 <!-- Home Component -->
-<script src="/static/js/react_components/src/home.js"></script>
+<!-- <script src="/static/js/react_components/src/home.js"></script> -->
 
 <!-- Login Component -->
-<script src="/static/js/react_components/src/login.js"></script>
+<!-- <script src="/static/js/react_components/src/login.js"></script> -->
 
 <!-- Release the beast -->
-<script src="/static/js/tracula/core.js"></script>
+<script src="/static/js/build/tracula.js"></script>
 <script type="text/javascript">
     // (function(d, tagName) {
     //     var js = d.createElement(tagName), ins;
